--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /UI/obj/Release/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
+/UI/obj/Release/SteerLoggerUser.csproj.ResolveComReference.cache
+/RPI/.idea/workspace.xml
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/Datalogger-Alistair/v16/.suo
