--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
 /.vs/Datalogger-Alistair-UI/v16/.suo
+/UI/UpgradeLog.htm
+/Logger-UI-Installer/Logger-UI-Installer.back.aip
