--- a/UI/SteerLoggerUser.csproj
+++ b/UI/SteerLoggerUser.csproj
@@ -87,6 +87,12 @@
     <Compile Include="ProgConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceiveProgessFrom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReceiveProgessFrom.Designer.cs">
+      <DependentUpon>ReceiveProgessFrom.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DatabaseSearchForm.resx">
       <DependentUpon>DatabaseSearchForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -112,6 +118,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReceiveProgessFrom.resx">
+      <DependentUpon>ReceiveProgessFrom.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="progConf.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
