Added ability to change progConfig settings using UI

--- a/UI/SteerLoggerUser.csproj
+++ b/UI/SteerLoggerUser.csproj
@@ -97,6 +97,12 @@
     <Compile Include="ReceiveProgessFrom.Designer.cs">
       <DependentUpon>ReceiveProgessFrom.cs</DependentUpon>
     </Compile>
+    <Compile Include="SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DatabaseSearchForm.resx">
       <DependentUpon>DatabaseSearchForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -124,6 +130,9 @@
     </Compile>
     <EmbeddedResource Include="ReceiveProgessFrom.resx">
       <DependentUpon>ReceiveProgessFrom.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="progConf.ini">
