--- a/UI/SteerLoggerUser.csproj
+++ b/UI/SteerLoggerUser.csproj
@@ -136,7 +136,7 @@
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="progConf.ini">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
