--- a/UI/SteerLoggerUser.csproj
+++ b/UI/SteerLoggerUser.csproj
@@ -109,11 +109,11 @@
     <Compile Include="ProgConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReceiveProgessFrom.cs">
+    <Compile Include="ReceiveProgressForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReceiveProgessFrom.Designer.cs">
-      <DependentUpon>ReceiveProgessFrom.cs</DependentUpon>
+    <Compile Include="ReceiveProgressForm.Designer.cs">
+      <DependentUpon>ReceiveProgressForm.cs</DependentUpon>
     </Compile>
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
@@ -146,8 +146,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ReceiveProgessFrom.resx">
-      <DependentUpon>ReceiveProgessFrom.cs</DependentUpon>
+    <EmbeddedResource Include="ReceiveProgressForm.resx">
+      <DependentUpon>ReceiveProgressForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
