Added Change_User, added Export_Database, added download and description as criteria for searching logs, rebuilt installer

--- a/UI/SteerLoggerUser.csproj
+++ b/UI/SteerLoggerUser.csproj
@@ -70,6 +70,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangeUserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeUserForm.Designer.cs">
+      <DependentUpon>ChangeUserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConfigFile.cs" />
     <Compile Include="DatabaseSearchForm.cs">
       <SubType>Form</SubType>
@@ -121,6 +127,9 @@
     <Compile Include="SettingsForm.Designer.cs">
       <DependentUpon>SettingsForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ChangeUserForm.resx">
+      <DependentUpon>ChangeUserForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DatabaseSearchForm.resx">
       <DependentUpon>DatabaseSearchForm.cs</DependentUpon>
     </EmbeddedResource>
