--- a/UI/SteerLoggerUser.csproj
+++ b/UI/SteerLoggerUser.csproj
@@ -76,7 +76,6 @@
     <Compile Include="ChangeUserForm.Designer.cs">
       <DependentUpon>ChangeUserForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ConfigFile.cs" />
     <Compile Include="DatabaseSearchForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +119,12 @@
     <Compile Include="ReceiveProgressForm.Designer.cs">
       <DependentUpon>ReceiveProgressForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="RenameForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RenameForm.Designer.cs">
+      <DependentUpon>RenameForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +161,9 @@
     </Compile>
     <EmbeddedResource Include="ReceiveProgressForm.resx">
       <DependentUpon>ReceiveProgressForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RenameForm.resx">
+      <DependentUpon>RenameForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SettingsForm.resx">
       <DependentUpon>SettingsForm.cs</DependentUpon>
