--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,11 @@
 /UI/obj/Release/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
 /UI/obj/Release/SteerLoggerUser.csproj.ResolveComReference.cache
 /UI/obj/Release/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
-/.vs/ProjectSettings.json
-/.vs/Datalogger-Alistair/v16/.suo
-/.vs/slnx.sqlite
-/.vs/VSWorkspaceState.json
-/.vs/Datalogger-Alistair-UI/v16/.suo
+/UI/.vs/ProjectSettings.json
+/UI/.vs/Datalogger-Alistair-UI/v16/.suo
+/UI/.vs/slnx.sqlite
+/UI/.vs/VSWorkspaceState.json
 /UI/UpgradeLog.htm
-/Logger-UI-Installer/Logger-UI-Installer.back.aip
+/SteerLoggerInstaller/SteerLoggerInstaller.back.aip
+UI/.vs/SteerLoggerUser/v16/.suo
+UI/obj/Debug/DesignTimeResolveAssemblyReferences.cache
