--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@
 /UI/obj/Release/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
 /UI/obj/Release/SteerLoggerUser.csproj.ResolveComReference.cache
 /UI/obj/Release/.NETFramework,Version=v4.6.1.AssemblyAttributes.cs
-.vs/ProjectSettings.json
-.vs/Datalogger-Alistair-UI/v16/.suo
-.vs/slnx.sqlite
-.vs/VSWorkspaceState.json
+/.vs/ProjectSettings.json
+/.vs/Datalogger-Alistair-UI/v16/.suo
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
 /UI/UpgradeLog.htm
 /SteerLoggerInstaller/SteerLoggerInstaller.back.aip
-/UI/.vs/SteerLoggerUser/v16/.suo
-/UI/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+UI/.vs/SteerLoggerUser/v16/.suo
+UI/obj/Debug/DesignTimeResolveAssemblyReferences.cache
+.idea/
