--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ UI/.vs/SteerLoggerUser/v16/.suo
 UI/obj/Debug/DesignTimeResolveAssemblyReferences.cache
 .idea/
 .vs/
+SteerLoggerInstaller/SteerLoggerInstaller-cache/
