--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ UI/obj/Debug/DesignTimeResolveAssemblyReferences.cache
 .vs/
 SteerLoggerInstaller/SteerLoggerInstaller-cache/
 UI/.vs/
+UI/pythonScripts/.idea/
